SDL Chinese translations update

--- a/translations/translations_zh_CN.csv
+++ b/translations/translations_zh_CN.csv
@@ -1,286 +1,286 @@
-key,zh-CN
-TIP_HEADER,你知道吗...
-TIP_1,每个单位每回合只能攻击一次
-TIP_2,"每种单位有弱点和优点 - 只有步兵才能占领建筑物，但几乎没有对抗坦克的胜算，而坦克则无法攻击直升机。"
-TIP_3,你可以在总部里部署士兵，但是在营房里这样做更便宜。
-TIP_4,当一个单位夺取一个塔时，它失去了本回合的所有剩余行动点数
-TIP_5,"所有生产建筑都需要一个士兵来维护它 - 占领它们将花费你一个士兵单位"
-TIP_6,总部和占领的塔或机场每回合会产生现金
-TIP_7,现金可以用于部署单位和移动
-TIP_8,"明智地使用你的现金 - 一个庞大的军队将比一个小分队更慢、更低效"
-TIP_9,单独派遣一个单位上战场永远不是一个好主意
-TIP_10,在班组中混合单元的类型会给你带来战略优势
-TIP_11,"阻塞出兵口将不能部署单位，敌人也不能 - 用你的单位封锁敌人的工厂"
-TIP_12,"单位只能攻击相邻的格子 - 所以当你的目标很远时，你应该先让你的单位靠近"
-TIP_13,"总部是游戏中最有价值的建筑物 - 如果你占领了敌方总部，你将赢得游戏"
-LABEL_WORKSHOP,工坊
-LABEL_MAIN_MENU,主菜单
-LABEL_START_TURN,开始回合
-LABEL_CAMPAIGN,远征
-LABEL_SKIRMISH,战斗
-LABEL_CONFIRM,确认
-LABEL_UNIT_ATTACK,攻击
-LABEL_UNIT_HEALTH,健康值
-LABEL_UNIT_RANGE,范围
-LABEL_BUILDING_HQ,总部
-LABEL_BUILDING_BARRACKS,兵营
-LABEL_BUILDING_FACTORY,工厂
-LABEL_BUILDING_AIRPORT,机场
-LABEL_BUILDING_GSM_TOWER,通信塔
-LABEL_REMOTE,远程
-LABEL_LOCAL,本地
-LABEL_OFF,关
-LABEL_ON,开
-LABEL_GAME,游戏
-LABEL_RESUME,恢复
-LABEL_EASY,简单
-LABEL_NORMAL,普通
-LABEL_MAPS_CREATED,创建地图数
-LABEL_COMPLETED,完成
-LABEL_NEXT,下一个
-LABEL_DELETE_MODE,删除
-LABEL_TURNS_CAP:,回合限制：
-LABEL_BACK,后退
-LABEL_SELECTED_MAP,选定的地图：
-LABEL_TURNS_CAP,回合限制:
-LABEL_PLAY,开始游戏
-LABEL_CPU,CPU
-LABEL_HUMAN,人类
-LABEL_ATTACK,攻击
-LABEL_HEALTH_MAX,健康值/最大值
-LABEL_HEALTH,健康值
-LABEL_ACTION_SLOTS,行动时段
-LABEL_INFANTRY,步兵
-LABEL_UNIT_HELI,直升机
-LABEL_RANGE,范围
-LABEL_DEPLOY_PRICE,部署价格
-LABEL_DEPLOY,部署
-LABEL_END,结束
-LABEL_TURN,回合
-LABEL_NEW_TURN,新的回合
-LABEL_ACTION_POINTS,行动点
-LABEL_UNIT,单位
-LABEL_BUILDING,建筑物
-LABEL_NEXT_TURN_GAIN,下一回合获得
-LABEL_MAP_NAME,地图名称
-LABEL_SELECT_UNIT,选择单位
-LABEL_PLEASE_WAIT,请等待...
-LABEL_SOUND_EFFECTS,音效
-LABEL_MUSIC,音乐
-LABEL_CAMERA_SHAKE,镜头抖动
-LABEL_AUTO_FOLLOW,镜头自动跟踪
-LABEL_ZOOM_LEVEL,缩放级别
-LABEL_BIGGER,放大
-LABEL_SMALLER,缩小
-LABEL_WINDOW,窗口
-LABEL_FULL_SCREEN,全屏
-LABEL_DIFFICULTY,难度
-LABEL_WINS,胜利
-LABEL_SETTINGS,设置
-LABEL_QUIT_GAME,退出游戏
-LABEL_RUN_DEMO,开始演示
-"LABEL_MAP EDITOR",地图编辑器
-LABEL_ONLINE,联网模式
-LABEL_MISSION,任务
-LABEL_BLUE_TEAM,蓝方军团
-LABEL_RED_TEAM,红队
-LABEL_START,开始游戏
-LABEL_MISSION_COMPLETED,远征通关
-LABEL_PREVIOUS,上一个
-LABEL_NAME,名称
-LABEL_WORKSHOP_UNITS,单位
-LABEL_WORKSHOP_BUILDINGS,建筑物
-LABEL_WORKSHOP_TERRAIN,地形
-LABEL_WORKSHOP_FILES_MANAGER,文件管理器
-LABEL_WORKSHOP_PICK_MAP,选择地图
-LABEL_WORKSHOP_FILE_SAVED,文件已保存
-LABEL_WORKSHOP_TOOLBOX,工具箱
-LABEL_WORKSHOP_UNDO_BUILD,撤销建造
-LABEL_WORKSHOP_MOVE_MAP,移动地图
-LABEL_WORKSHOP_BUILD_TERRAIN,建造地形
-LABEL_WORKSHOP_SELECTED_TOOL,选择工具
-LABEL_WORKSHOP_CREATE,创建
-LABEL_WORKSHOP_SIZE,大小
-LABEL_WORKSHOP_CLEAR_LAYERS,清除图层
-LABEL_WORKSHOP_EREASE,清除
-LABEL_WORKSHOP_PLAIN,平原
-LABEL_WORKSHOP_DIRT,泥土
-LABEL_WORKSHOP_FOREST,森林
-LABEL_WORKSHOP_MOUNTAIN,山脉
-LABEL_WORKSHOP_RIVER,河流
-LABEL_WORKSHOP_BRIDGE,桥梁
-LABEL_WORKSHOP_CITY,城市
-LABEL_WORKSHOP_RUBBLE,瓦砾堆
-LABEL_WORKSHOP_STATUE,雕像
-LABEL_WORKSHOP_FENCE,栅栏
-LABEL_WORKSHOP_ROAD#1,道路#1
-LABEL_WORKSHOP_ROAD#2,道路#2
-LABEL_WORKSHOP_HQ,总部
-LABEL_WORKSHOP_BARRACKS,兵营
-LABEL_WORKSHOP_FACTORY,工厂
-LABEL_WORKSHOP_AIRPORT,机场
-LABEL_WORKSHOP_SPAWN,出兵口
-LABEL_WORKSHOP_GSM_TOWER,通信塔
-LABEL_WORKSHOP_TOWER,塔
-LABEL_WORKSHOP_INFANTRY,步兵
-LABEL_WORKSHOP_TANK,坦克
-LABEL_WORKSHOP_HELI,直升机
-LABEL_WORKSHOP_CIVILIAN,平民
-LABEL_WORKSHOP_CONCRETE,混凝土
-MSG_NO_ENOUGH_AP,"NOT ENOUGH AP"
-MSG_START_YOUR_TURN_NOW,"Start your turn now!"
-MSG_EMPTY_DISPLAY,"&lt; NOTHING TO DISPLAY&#000a;&lt; SELECT UNIT OR BUILDING"
-MSG_GAME_DESCRIPTION_1,自由*&开源
-MSG_GAME_DESCRIPTION_2,回合制战略游戏
-MSG_FREE_AS_FREEDOM,"*free，是自由（freedom）的自由（free），而不是免费啤酒（free beer）的免费（free）"
-MSG_INDIE_GAME,"INDIE GAME&#000a;DESIGN &amp; &#000a;DEVELOP"
-MSG_WORKSHOP_USE_UNIQUE_NAME,"USE UNIQUE NAME"
-MSG_WORKSHOP_CREATE_NEW_ISLAND,"CREATE NEW ISLAND"
-MSG_WORKSHOP_LOSE_MAP_DATA,"YOU WILL LOSE MAP DATA!"
-LABEL_GAME_OVER,游戏结束
-LABEL_DOMINATION,占领
-LABEL_MOVES,移动
-LABEL_DEPLOYED,部署
-LABEL_ELIMINATED,消灭
-LABEL_BLUE,蓝队
-LABEL_RED,红队
-LABEL_TIME,时间
-LABEL_TOTAL_SCORE,总分数
-LABEL_PLAYERS_TIME,玩家用时
-LABEL_MENU,菜单
-LABEL_PLAY_AGAIN,再玩一次
-LABEL_REQUIES_RESTART,需要重启地图
-LABEL_LANGUAGE,语言
-LABEL_OVERSCAN,过扫描
-LABEL_GAME_TIME,游戏时间
-LABEL_TURNS,回合
-LABEL_BLUE_WINS,蓝队获胜
-LABEL_RED_WINS,红队获胜
-LABEL_PLAYING_AS,扮演
-LABEL_MAPS,地图
-LABEL_PAGE,页面
-LABEL_WORKSHOP_SAVE,保存
-LABEL_WORKSHOP_LOAD,加载
-LABEL_MAP_TO_UPLOAD,要上传的地图
-LABEL_PROCEED_QUESTION,继续？
-LABEL_UPLOAD_MAP,上传地图
-LABEL_UPLOAD,上传
-LABEL_CANCEL,取消
-TIP_COMPLETE_MAP_FIRST,你需要先在遭遇战模式下完成此地图，才能上传它。
-LABEL_GOT_IT,知道了！
-LABEL_ONLINE_MENU,在线地图
-MSG_ONLINE_MENU_DESC,"DOWNLOAD NEW MAPS OR SHARE YOUR OWN CREATIONS WITH THE WORLD!"
-TIP_UPLOADING_WAIT,正在上传！请稍候。
-TIP_UPLOADING_SUCCESS,上传成功！现在你可以与你的朋友分享你的新地图代码：
-TIP_UPLOADING_FAIL,上传失败。请稍后再试。
-LABEL_DONE,完成
-TIP_WELCOME_ONLINE,"欢迎来到ToF Online！"
-TIP_NEED_REGISTER,在你开始使用在线选项之前，我们需要在我们的在线系统中注册你的设备。
-LABEL_REGISTER,注册
-LABEL_LATER,以后再说
-LABEL_REGISTER_PLAYER,注册玩家
-TIP_REQUESTING_PLAYER_ID,正在请求玩家的ID！请等待。
-TIP_REQUESTING_PLAYER_FAIL,请求玩家ID失败。请稍后再试。
-TIP_REQUESTING_PLAYER_SUCCESS,"请求玩家ID成功。欢迎来到ToF Online！"
-LABEL_DOWNLOAD_MAP,下载地图
-TIP_INPUT_CODE,请输入地图代码
-LABEL_DOWNLOAD,下载
-TIP_DOWNLOADING_WAIT,正在下载地图！请等待。
-TIP_MAP_DOWNLOAD_SUCCESS,地图已下载完成。
-TIP_MAP_DOWNLOAD_FAIL,无法下载地图。请检查代码是否正确并重试。
-LABEL_VERSION,版本
-TITLE_GAMEPAD_CONFIG,游戏手柄图示
-LABEL_PREVIOUS_UNIT,选取上一个单位
-LABEL_NEXT_UNIT,选取下一个单位
-LABEL_SELECTOR_MOVEMENT,移动选取框
-LABEL_GAME_MENU_MOVEMENT,菜单导航
-LABEL_END_TURN,结束我的回合
-LABEL_BACK_TO_MENU,打开主菜单
-LABEL_SELECT,实施行动
-LABEL_DEPLOY_UNIT,购买新单位
-LABEL_GAMEPAD_INFO,游戏手柄说明
-LABEL_WORKSHOP_THEME,地图主题
-LABEL_SUMMER,夏季
-LABEL_FALL,秋季
-LABEL_WINTER,冬季
-LABEL_WORKSHOP_FAILURE,操作失败
-MSG_WORKSHOP_FILE_ERROR_NAME,"Map name may only contain alphanumeric characters and an underscore sign."
-MSG_WORKSHOP_FILE_NOT_FOUND,"Map with specified name does not exists."
-MSG_WORKSHOP_CHECK_TYPOS,"Please re-check file name"
-LABEL_OK,确认
-LABEL_NEXT_TURN,结束回合
-LABEL_CPU_TURN,"CPU 回合"
-LABEL_REFRESHING_MATCHES,正在刷新比赛
-TIP_REFRESHING_WAIT,正在刷新在线比赛列表。请稍候...
-LABEL_CREATE_MATCH,创建比赛
-MSG_CONFIRM_CREATE,"DO YOU WANT TO HOST A NEW MATCH?"
-LABEL_PROCEED,继续
-LABEL_PICK_SIDE,选择阵营
-MSG_PICK_SIDE,"PICK THE SIDE YOU WANT TO PLAY AS"
-MSG_SELECTED_MAP,"SELECTED MAP: "
-MSG_SELECTED_SIDE,"SELECTED SIDE: "
-MSG_READY_TO_CREATE,"CREATE MATCH?"
-MSG_CREATING_MATCH_WAIT,"CREATING NEW MATCH. PLEASE WAIT..."
-LABEL_FAILURE,操作失败
-MSG_OPERATION_FAILED,"NETWORK OPERATION FAILED. PLEASE CHECK YOUR INTERNET CONNECTION AND TRY AGAIN."
-LABEL_JOIN_MATCH,加入一场比赛
-MSG_INPUT_MATCH_CODE,"INPUT MATCH JOIN CODE"
-LABEL_JOIN,加入
-MSG_ALREADY_IN_MATCH,"YOU ARE ALREADY IN THAT MATCH"
-MSG_FETCHING_MATCH_DETAILS,"FETCHING MATCH DETAILS. PLEASE WAIT..."
-MAG_AVAILABLE_SIDE,"AVAILABLE SIDE: "
-MAG_PROCEED_JOIN,"JOIN THIS MATCH?"
-MSG_JOINING_MATCH_WAIT,"JOINING A MATCH. PLEASE WAIT..."
-LABEL_MATCH_CODE,比赛代码：
-LABEL_YOUR_TURN,你的回合
-LABEL_ENEMY_TURN,对手回合
-LABEL_YOU_WIN,你赢了
-LABEL_YOU_LOSE,你输了
-LABEL_NEW_MATCH,新比赛
-LABEL_MATCH_IN_PROGRESS,进行中
-LABEL_MATCH_ENDED,比赛结束
-LABEL_MATCH_FORFEIT,对手离开
-LABEL_MAP_CODE,地图：
-LABEL_INVALID_MATCH,无效比赛
-LABEL_ABANDON_MATCH,放弃比赛
-MAG_ABANDON_MATCH,"ARE YOU SURE YOU WANT TO ABANDON THIS MATCH? YOU WILL NOT BE ABLE TO CONTINUE THIS GAME."
-LABEL_CLEAR_SLOT,清除游戏房间
-MSG_CLEARING_SLOT_WAIT,"CLEARING GAME SLOT. PLEASE WAIT..."
-LABEL_SHOW_REPLAY,显示回放
-MSG_SHOW_REPLAY,"DO YOU WANT TO SEE THE REPLAY OF OPPONENTS TURN?"
-LABEL_REPLAY,重启游戏
-LABEL_SKIP,跳过
-LABEL_LOADING_MATCH,正在加载比赛
-MSG_LOADING_MATCH_WAIT,"LOADING MATCH DATA. PLEASE WAIT..."
-MSG_OPPONENT_WAIT,"WAITING FOR OPPONENT..."
-MSG_CHECKING_STATE,"CHECKING FOR NEW MOVES..."
-LABEL_REPLAYING_MOVES,重新进行回合
-LABEL_REFRESH,刷新
-LABEL_MULTIPLAYER,多人游戏
-LABEL_CREATE,创建
-LABEL_FORFEIT,放弃
-LABEL_CLEAR,清除
-LABEL_HELP,帮助
-MSG_MULTIPLAYER_WELCOME,"Welcome to ToF multiplayer!"
-TIP_ONLINE_HELP_1,要开始一个新游戏，请按下一个游戏房间上的“创建”按钮。如果按钮被禁用，这意味着你需要先下载在线地图。请访问http://online.tof.p1x.in找一些！一旦你主持了一场比赛，请把比赛代码给你的朋友加入。
-TIP_ONLINE_HELP_2,"在比赛中，你或你的对手进行回合没有时间限制。记住，在等待你的回合时不要闲下来 - 你可以自由参与战役、遭遇战或加载到不同的多人比赛中！退出游戏也是一个选择，但你会这样做吗？"
-TIP_ONLINE_HELP_3,您最多只能创建四个游戏房间，清除那些已经结束的游戏房间。
-MSG_SPAWN_BLOCKED,"SPAWN BLOCKED"
-MSG_MULTIPLAYER_LOBBY_HEADLINE,"ONLINE MULTIPLAYER LOBBY"
-MSG_MULTIPLAYER_LOBBY_SUB,"you may have up to four simultaneous games"
-LABEL_WORKSHOP_CLEAR_MAP,清除地图上所有东西
-MSG_WORKSHOP_FILL_MAP,"FILL MAP WITH GRASS TILES"
-LABEL_WORKSHOP_TILES,格子
-LABEL_PREVIEW,预览
-MSG_ASK_UPLOAD,"BEGIN MAP UPLOAD?"
-LABEL_GFX,画面
-LABEL_SOUND,声音
-LABEL_TOOLTIPS,物品提示
-LABEL_CURRENT_TEAM,当前队伍
-LABEL_CURRENT_MAP,当前地图
-LABEL_AI_SPEED,AI速度
-LABEL_CAMERA_MOVE_TO_BUNKER,镜头移回总部
-LABEL_CAMERA_SPEED,镜头速度
-LABEL_BLUE_TEAM_TURN,蓝队回合
-LABEL_RED_TEAM_TURN,红队回合
-LABEL_NO_MORE_MOVES,没有可用的移动次数
+﻿key,zh-CN
+TIP_HEADER,zh-CN
+TIP_1,你知道吗...
+TIP_2,"每个单位每回合只能攻击一次"
+TIP_3,每种单位有弱点和优点 - 只有步兵才能占领建筑物，但几乎没有对抗坦克的胜算，而坦克则无法攻击直升机。
+TIP_4,你可以在总部里部署士兵，但是在营房里这样做更便宜。
+TIP_5,"当一个单位夺取一个塔时，它失去了本回合的所有剩余行动点数"
+TIP_6,所有生产建筑都需要一个士兵来维护它 - 占领它们将花费你一个士兵单位
+TIP_7,总部和占领的塔或机场每回合会产生现金
+TIP_8,"现金可以用于部署单位和移动"
+TIP_9,明智地使用你的现金 - 一个庞大的军队将比一个小分队更慢、更低效
+TIP_10,单独派遣一个单位上战场永远不是一个好主意
+TIP_11,"在班组中混合单元的类型会给你带来战略优势"
+TIP_12,"阻塞出兵口将不能部署单位，敌人也不能 - 用你的单位封锁敌人的工厂"
+TIP_13,"单位只能攻击相邻的格子 - 所以当你的目标很远时，你应该先让你的单位靠近"
+LABEL_WORKSHOP,总部是游戏中最有价值的建筑物 - 如果你占领了敌方总部，你将赢得游戏
+LABEL_MAIN_MENU,工坊
+LABEL_START_TURN,主菜单
+LABEL_CAMPAIGN,开始回合
+LABEL_SKIRMISH,远征
+LABEL_CONFIRM,战斗
+LABEL_UNIT_ATTACK,确认
+LABEL_UNIT_HEALTH,攻击
+LABEL_UNIT_RANGE,健康值
+LABEL_BUILDING_HQ,范围
+LABEL_BUILDING_BARRACKS,总部
+LABEL_BUILDING_FACTORY,兵营
+LABEL_BUILDING_AIRPORT,工厂
+LABEL_BUILDING_GSM_TOWER,机场
+LABEL_REMOTE,通信塔
+LABEL_LOCAL,远程
+LABEL_OFF,本地
+LABEL_ON,关
+LABEL_GAME,开
+LABEL_RESUME,游戏
+LABEL_EASY,恢复
+LABEL_NORMAL,简单
+LABEL_MAPS_CREATED,普通
+LABEL_COMPLETED,创建地图数
+LABEL_NEXT,完成
+LABEL_DELETE_MODE,下一个
+LABEL_TURNS_CAP:,删除
+LABEL_BACK,回合限制：
+LABEL_SELECTED_MAP,后退
+LABEL_TURNS_CAP,选定的地图：
+LABEL_PLAY,回合限制:
+LABEL_CPU,开始游戏
+LABEL_HUMAN,CPU
+LABEL_ATTACK,人类
+LABEL_HEALTH_MAX,攻击
+LABEL_HEALTH,健康值/最大值
+LABEL_ACTION_SLOTS,健康值
+LABEL_INFANTRY,行动时段
+LABEL_UNIT_HELI,步兵
+LABEL_RANGE,直升机
+LABEL_DEPLOY_PRICE,范围
+LABEL_DEPLOY,部署价格
+LABEL_END,部署
+LABEL_TURN,结束
+LABEL_NEW_TURN,回合
+LABEL_ACTION_POINTS,新的回合
+LABEL_UNIT,行动点
+LABEL_BUILDING,单位
+LABEL_NEXT_TURN_GAIN,建筑物
+LABEL_MAP_NAME,下一回合获得
+LABEL_SELECT_UNIT,地图名称
+LABEL_PLEASE_WAIT,选择单位
+LABEL_SOUND_EFFECTS,请等待...
+LABEL_MUSIC,音效
+LABEL_CAMERA_SHAKE,音乐
+LABEL_AUTO_FOLLOW,镜头抖动
+LABEL_ZOOM_LEVEL,镜头自动跟踪
+LABEL_BIGGER,缩放级别
+LABEL_SMALLER,放大
+LABEL_WINDOW,缩小
+LABEL_FULL_SCREEN,窗口
+LABEL_DIFFICULTY,全屏
+LABEL_WINS,难度
+LABEL_SETTINGS,胜利
+LABEL_QUIT_GAME,设置
+LABEL_RUN_DEMO,退出游戏
+"LABEL_MAP EDITOR",开始演示
+LABEL_ONLINE,地图编辑器
+LABEL_MISSION,联网模式
+LABEL_BLUE_TEAM,任务
+LABEL_RED_TEAM,蓝方军团
+LABEL_START,红队
+LABEL_MISSION_COMPLETED,开始游戏
+LABEL_PREVIOUS,远征通关
+LABEL_NAME,上一个
+LABEL_WORKSHOP_UNITS,名称
+LABEL_WORKSHOP_BUILDINGS,单位
+LABEL_WORKSHOP_TERRAIN,建筑物
+LABEL_WORKSHOP_FILES_MANAGER,地形
+LABEL_WORKSHOP_PICK_MAP,文件管理器
+LABEL_WORKSHOP_FILE_SAVED,选择地图
+LABEL_WORKSHOP_TOOLBOX,文件已保存
+LABEL_WORKSHOP_UNDO_BUILD,工具箱
+LABEL_WORKSHOP_MOVE_MAP,撤销建造
+LABEL_WORKSHOP_BUILD_TERRAIN,移动地图
+LABEL_WORKSHOP_SELECTED_TOOL,建造地形
+LABEL_WORKSHOP_CREATE,选择工具
+LABEL_WORKSHOP_SIZE,创建
+LABEL_WORKSHOP_CLEAR_LAYERS,大小
+LABEL_WORKSHOP_EREASE,清除图层
+LABEL_WORKSHOP_PLAIN,清除
+LABEL_WORKSHOP_DIRT,平原
+LABEL_WORKSHOP_FOREST,泥土
+LABEL_WORKSHOP_MOUNTAIN,森林
+LABEL_WORKSHOP_RIVER,山脉
+LABEL_WORKSHOP_BRIDGE,河流
+LABEL_WORKSHOP_CITY,桥梁
+LABEL_WORKSHOP_RUBBLE,城市
+LABEL_WORKSHOP_STATUE,瓦砾堆
+LABEL_WORKSHOP_FENCE,雕像
+LABEL_WORKSHOP_ROAD#1,栅栏
+LABEL_WORKSHOP_ROAD#2,道路#1
+LABEL_WORKSHOP_HQ,道路#2
+LABEL_WORKSHOP_BARRACKS,总部
+LABEL_WORKSHOP_FACTORY,兵营
+LABEL_WORKSHOP_AIRPORT,工厂
+LABEL_WORKSHOP_SPAWN,机场
+LABEL_WORKSHOP_GSM_TOWER,出兵口
+LABEL_WORKSHOP_TOWER,通信塔
+LABEL_WORKSHOP_INFANTRY,塔
+LABEL_WORKSHOP_TANK,步兵
+LABEL_WORKSHOP_HELI,坦克
+LABEL_WORKSHOP_CIVILIAN,直升机
+LABEL_WORKSHOP_CONCRETE,平民
+MSG_NO_ENOUGH_AP,"混凝土"
+MSG_START_YOUR_TURN_NOW,"AP不足"
+MSG_EMPTY_DISPLAY,"现在轮到你了！"
+MSG_GAME_DESCRIPTION_1,&lt; 没有要显示的内容&#000a;&lt; 选择单位或建筑
+MSG_GAME_DESCRIPTION_2,自由*&开源
+MSG_FREE_AS_FREEDOM,"回合制战略游戏"
+MSG_INDIE_GAME,"*自由，是freedom的自由，而不是free beer的免费"
+MSG_WORKSHOP_USE_UNIQUE_NAME,"独立游戏&#000a;设计 &amp; &#000a;开发"
+MSG_WORKSHOP_CREATE_NEW_ISLAND,"使用独特的名称"
+MSG_WORKSHOP_LOSE_MAP_DATA,"创建新岛屿"
+LABEL_GAME_OVER,您将失去地图数据！
+LABEL_DOMINATION,游戏结束
+LABEL_MOVES,占领
+LABEL_DEPLOYED,移动
+LABEL_ELIMINATED,部署
+LABEL_BLUE,消灭
+LABEL_RED,蓝队
+LABEL_TIME,红队
+LABEL_TOTAL_SCORE,时间
+LABEL_PLAYERS_TIME,总分数
+LABEL_MENU,玩家用时
+LABEL_PLAY_AGAIN,菜单
+LABEL_REQUIES_RESTART,再玩一次
+LABEL_LANGUAGE,需要重启地图
+LABEL_OVERSCAN,语言
+LABEL_GAME_TIME,过扫描
+LABEL_TURNS,游戏时间
+LABEL_BLUE_WINS,回合
+LABEL_RED_WINS,蓝队获胜
+LABEL_PLAYING_AS,红队获胜
+LABEL_MAPS,扮演
+LABEL_PAGE,地图
+LABEL_WORKSHOP_SAVE,页面
+LABEL_WORKSHOP_LOAD,保存
+LABEL_MAP_TO_UPLOAD,加载
+LABEL_PROCEED_QUESTION,要上传的地图
+LABEL_UPLOAD_MAP,继续？
+LABEL_UPLOAD,上传地图
+LABEL_CANCEL,上传
+TIP_COMPLETE_MAP_FIRST,取消
+LABEL_GOT_IT,你需要先在遭遇战模式下完成此地图，才能上传它。
+LABEL_ONLINE_MENU,知道了！
+MSG_ONLINE_MENU_DESC,"在线地图"
+TIP_UPLOADING_WAIT,下载新地图或与世界分享您自己的创作！
+TIP_UPLOADING_SUCCESS,正在上传！请稍候。
+TIP_UPLOADING_FAIL,上传成功！现在你可以与你的朋友分享你的新地图代码：
+LABEL_DONE,上传失败。请稍后再试。
+TIP_WELCOME_ONLINE,"完成"
+TIP_NEED_REGISTER,欢迎来到ToF Online！
+LABEL_REGISTER,在你开始使用在线选项之前，我们需要在我们的在线系统中注册你的设备。
+LABEL_LATER,注册
+LABEL_REGISTER_PLAYER,以后再说
+TIP_REQUESTING_PLAYER_ID,注册玩家
+TIP_REQUESTING_PLAYER_FAIL,正在请求玩家的ID！请等待。
+TIP_REQUESTING_PLAYER_SUCCESS,"请求玩家ID失败。请稍后再试。"
+LABEL_DOWNLOAD_MAP,请求玩家ID成功。欢迎来到ToF Online！
+TIP_INPUT_CODE,下载地图
+LABEL_DOWNLOAD,请输入地图代码
+TIP_DOWNLOADING_WAIT,下载
+TIP_MAP_DOWNLOAD_SUCCESS,正在下载地图！请等待。
+TIP_MAP_DOWNLOAD_FAIL,地图已下载完成。
+LABEL_VERSION,无法下载地图。请检查代码是否正确并重试。
+TITLE_GAMEPAD_CONFIG,版本
+LABEL_PREVIOUS_UNIT,游戏手柄图示
+LABEL_NEXT_UNIT,选取上一个单位
+LABEL_SELECTOR_MOVEMENT,选取下一个单位
+LABEL_GAME_MENU_MOVEMENT,移动选取框
+LABEL_END_TURN,菜单导航
+LABEL_BACK_TO_MENU,结束我的回合
+LABEL_SELECT,打开主菜单
+LABEL_DEPLOY_UNIT,实施行动
+LABEL_GAMEPAD_INFO,购买新单位
+LABEL_WORKSHOP_THEME,游戏手柄说明
+LABEL_SUMMER,地图主题
+LABEL_FALL,夏季
+LABEL_WINTER,秋季
+LABEL_WORKSHOP_FAILURE,冬季
+MSG_WORKSHOP_FILE_ERROR_NAME,"操作失败"
+MSG_WORKSHOP_FILE_NOT_FOUND,"地图名称只能包含字母数字和下划线符号。"
+MSG_WORKSHOP_CHECK_TYPOS,"指定名称的地图不存在。"
+LABEL_OK,请重新检查文件名
+LABEL_NEXT_TURN,确认
+LABEL_CPU_TURN,"结束回合"
+LABEL_REFRESHING_MATCHES,CPU 回合
+TIP_REFRESHING_WAIT,正在刷新比赛
+LABEL_CREATE_MATCH,正在刷新在线比赛列表。请稍候...
+MSG_CONFIRM_CREATE,"创建比赛"
+LABEL_PROCEED,您想主持一个新比赛吗？
+LABEL_PICK_SIDE,继续
+MSG_PICK_SIDE,"选择阵营"
+MSG_SELECTED_MAP,"选择您想扮演的一方"
+MSG_SELECTED_SIDE,"选择的地图："
+MSG_READY_TO_CREATE,"选择的一方："
+MSG_CREATING_MATCH_WAIT,"创建比赛？"
+LABEL_FAILURE,正在创建新的比赛。请稍候...
+MSG_OPERATION_FAILED,"操作失败"
+LABEL_JOIN_MATCH,网络操作失败。请检查您的互联网连接并重试。
+MSG_INPUT_MATCH_CODE,"加入一场比赛"
+LABEL_JOIN,输入比赛加入代码
+MSG_ALREADY_IN_MATCH,"加入"
+MSG_FETCHING_MATCH_DETAILS,"您已经在那个比赛中了"
+MAG_AVAILABLE_SIDE,"获取比赛详情。请稍候..."
+MAG_PROCEED_JOIN,"AVAILABLE SIDE: "
+MSG_JOINING_MATCH_WAIT,"JOIN THIS MATCH?"
+LABEL_MATCH_CODE,加入比赛。请稍候...
+LABEL_YOUR_TURN,比赛代码：
+LABEL_ENEMY_TURN,你的回合
+LABEL_YOU_WIN,对手回合
+LABEL_YOU_LOSE,你赢了
+LABEL_NEW_MATCH,你输了
+LABEL_MATCH_IN_PROGRESS,新比赛
+LABEL_MATCH_ENDED,进行中
+LABEL_MATCH_FORFEIT,比赛结束
+LABEL_MAP_CODE,对手离开
+LABEL_INVALID_MATCH,地图：
+LABEL_ABANDON_MATCH,无效比赛
+MAG_ABANDON_MATCH,"放弃比赛"
+LABEL_CLEAR_SLOT,ARE YOU SURE YOU WANT TO ABANDON THIS MATCH? YOU WILL NOT BE ABLE TO CONTINUE THIS GAME.
+MSG_CLEARING_SLOT_WAIT,"清除游戏房间"
+LABEL_SHOW_REPLAY,正在清除游戏房间。请稍候...
+MSG_SHOW_REPLAY,"显示回放"
+LABEL_REPLAY,您想回看对手的回合吗？
+LABEL_SKIP,重启游戏
+LABEL_LOADING_MATCH,跳过
+MSG_LOADING_MATCH_WAIT,"正在加载比赛"
+MSG_OPPONENT_WAIT,"正在加载比赛数据。请稍候..."
+MSG_CHECKING_STATE,"等待对手..."
+LABEL_REPLAYING_MOVES,检查新动作...
+LABEL_REFRESH,重新进行回合
+LABEL_MULTIPLAYER,刷新
+LABEL_CREATE,多人游戏
+LABEL_FORFEIT,创建
+LABEL_CLEAR,放弃
+LABEL_HELP,清除
+MSG_MULTIPLAYER_WELCOME,"帮助"
+TIP_ONLINE_HELP_1,欢迎来到ToF多人游戏！
+TIP_ONLINE_HELP_2,"要开始一个新游戏，请按下一个游戏房间上的“创建”按钮。如果按钮被禁用，这意味着你需要先下载在线地图。请访问http://online.tof.p1x.in找一些！一旦你主持了一场比赛，请把比赛代码给你的朋友加入。"
+TIP_ONLINE_HELP_3,在比赛中，你或你的对手进行回合没有时间限制。记住，在等待你的回合时不要闲下来 - 你可以自由参与战役、遭遇战或加载到不同的多人比赛中！退出游戏也是一个选择，但你会这样做吗？
+MSG_SPAWN_BLOCKED,"您最多只能创建四个游戏房间，清除那些已经结束的游戏房间。"
+MSG_MULTIPLAYER_LOBBY_HEADLINE,"出兵口受阻"
+MSG_MULTIPLAYER_LOBBY_SUB,"在线多人游戏大厅"
+LABEL_WORKSHOP_CLEAR_MAP,您最多可以同时进行四场游戏
+MSG_WORKSHOP_FILL_MAP,"清除地图上所有东西"
+LABEL_WORKSHOP_TILES,用草坪地块填充地图
+LABEL_PREVIEW,格子
+MSG_ASK_UPLOAD,"预览"
+LABEL_GFX,开始上传地图？
+LABEL_SOUND,画面
+LABEL_TOOLTIPS,声音
+LABEL_CURRENT_TEAM,物品提示
+LABEL_CURRENT_MAP,当前队伍
+LABEL_AI_SPEED,当前地图
+LABEL_CAMERA_MOVE_TO_BUNKER,AI速度
+LABEL_CAMERA_SPEED,镜头移回总部
+LABEL_BLUE_TEAM_TURN,镜头速度
+LABEL_RED_TEAM_TURN,蓝队回合
+LABEL_NO_MORE_MOVES,红队回合
