Fix translation files bugs

--- a/translations/campaigns/campaign.csv
+++ b/translations/campaigns/campaign.csv
@@ -185,4 +185,4 @@
 "MISSION_TITLE_PENINSULA","Peninsula","Peninsula","Peninsula","Península","Péninsule","半島","Półwysep","Полуостров"
 "MISSION_TITLE_RECAPTURE","Recapture","Recapture","Recapture","Reconquista","Reprise","奪還","Kontratak","Перехват"
 "MISSION_TITLE_RIOTS","Riots","Riots","Riots","Disturbios","Rebelles","暴動","Zamieszki","Перебранки"
-"key","en","en","de","es","fr","ja","pl","ru"
+"key","en","zh-CN","de","es","fr","ja","pl","ru"
