--- a/translations/translations_zh_CN.csv
+++ b/translations/translations_zh_CN.csv
@@ -1,5 +1,5 @@
-﻿key,zh-CN
-TIP_HEADER,zh-CN
+key,zh-CN
+TIP_HEADER,你知道吗...
 TIP_1,你知道吗...
 TIP_2,"每个单位每回合只能攻击一次"
 TIP_3,每种单位有弱点和优点 - 只有步兵才能占领建筑物，但几乎没有对抗坦克的胜算，而坦克则无法攻击直升机。
